Bump bouncycastle jdk15on version to jdk18on 1.78.1 and associated changes